--- a/src/main/resources/messages/LazyApprovalTool.properties
+++ b/src/main/resources/messages/LazyApprovalTool.properties
@@ -1,9 +1,10 @@
 org.joget.marketplace.lazyapprovaltool.config=Configure Lazy Approval Tool
 
-org.joget.marketplace.lazyapprovaltool.formDefId = Form
+org.joget.marketplace.lazyapprovaltool.formDefId=Form
 org.joget.marketplace.lazyapprovaltool.process=Process
 org.joget.marketplace.lazyapprovaltool.activity=Activity
-org.joget.marketplace.lazyapprovaltool.wfVariable=Workflow Variable (Status)
+org.joget.marketplace.lazyapprovaltool.assignee=Assignee (Participant ID)
+org.joget.marketplace.lazyapprovaltool.wfVariableStatus=Workflow Variable (Status)
 
 processtool.lazyapprovaltool.name=Lazy Approval Tool
 processtool.lazyapprovaltool.desc=Generates assignment URL for lazy approval
