--- a/src/main/resources/properties/LazyApprovalTool.json
+++ b/src/main/resources/properties/LazyApprovalTool.json
@@ -37,7 +37,17 @@
                 "type":"selectbox",
                 "required": "True",
                 "options_ajax": "[CONTEXT_PATH]/web/json/console/app[APP_PATH]/workflowVariable/options"
-            }
+            },
+            {
+                "name" : "showPopupAfterAction",
+                "label" : "@@org.joget.marketplace.lazyapprovaltool.showPopupAfterAction@@",
+                "type" : "checkbox",
+                "description" : "@@org.joget.marketplace.lazyapprovaltool.showPopupAfterAction.desc@@",
+                "options" : [{
+                  "label" : "",
+                  "value" : "true"
+                }]
+              }
         ]
     }
 ]
